reference/5.1/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390782
Help Version: 5.2.0.0
keywords: powershell,applet de commande
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 2292aa015ff3471ac7febdda94e1a10e895dea27
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 10/07/2020
ms.locfileid: "93206382"
---
# <span data-ttu-id="a1c66-103">Module Microsoft.PowerShell.Core</span><span class="sxs-lookup"><span data-stu-id="a1c66-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="a1c66-104">Description</span><span class="sxs-lookup"><span data-stu-id="a1c66-104">Description</span></span>

<span data-ttu-id="a1c66-105">Cette section contient les rubriques d’aide pour les applets de commande installées avec le module Microsoft. PowerShell. Core PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a1c66-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="a1c66-106">Le module principal contient des applets de commande et des fournisseurs qui gèrent les fonctionnalités de base de PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a1c66-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="a1c66-107">Applets de commande Microsoft. PowerShell. Core</span><span class="sxs-lookup"><span data-stu-id="a1c66-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="a1c66-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="a1c66-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="a1c66-109">Ajoute des entrées à l'historique de session.</span><span class="sxs-lookup"><span data-stu-id="a1c66-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="a1c66-110">Add-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="a1c66-110">Add-PSSnapin</span></span>](Add-PSSnapin.md)
<span data-ttu-id="a1c66-111">Ajoute un ou plusieurs composants logiciels enfichables Windows PowerShell à la session active.</span><span class="sxs-lookup"><span data-stu-id="a1c66-111">Adds one or more Windows PowerShell snap-ins to the current session.</span></span>

### [<span data-ttu-id="a1c66-112">Clear-History</span><span class="sxs-lookup"><span data-stu-id="a1c66-112">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="a1c66-113">Supprime des entrées de l’historique de commande de session PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a1c66-113">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="a1c66-114">Clear-Host</span><span class="sxs-lookup"><span data-stu-id="a1c66-114">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="a1c66-115">Efface l'affichage dans le programme hôte.</span><span class="sxs-lookup"><span data-stu-id="a1c66-115">Clears the display in the host program.</span></span>

### [<span data-ttu-id="a1c66-116">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="a1c66-116">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="a1c66-117">Se reconnecte aux sessions déconnectées.</span><span class="sxs-lookup"><span data-stu-id="a1c66-117">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="a1c66-118">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="a1c66-118">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="a1c66-119">Débogue une tâche de workflow en arrière-plan, distante ou Windows PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a1c66-119">Debugs a running background, remote, or Windows PowerShell Workflow job.</span></span>

### [<span data-ttu-id="a1c66-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="a1c66-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="a1c66-121">Empêche les points de terminaison PowerShell de recevoir des connexions à distance.</span><span class="sxs-lookup"><span data-stu-id="a1c66-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="a1c66-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a1c66-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="a1c66-123">Désactive les configurations de session sur l'ordinateur local.</span><span class="sxs-lookup"><span data-stu-id="a1c66-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="a1c66-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="a1c66-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="a1c66-125">Se déconnecte d'une session.</span><span class="sxs-lookup"><span data-stu-id="a1c66-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="a1c66-126">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="a1c66-126">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="a1c66-127">Configure l'ordinateur pour recevoir des commandes à distance.</span><span class="sxs-lookup"><span data-stu-id="a1c66-127">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="a1c66-128">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a1c66-128">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="a1c66-129">Active les configurations de session sur l'ordinateur local.</span><span class="sxs-lookup"><span data-stu-id="a1c66-129">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="a1c66-130">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="a1c66-130">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="a1c66-131">Se connecte à et entre dans une session interactive avec un processus local.</span><span class="sxs-lookup"><span data-stu-id="a1c66-131">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="a1c66-132">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="a1c66-132">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="a1c66-133">Démarre une session interactive avec un ordinateur distant.</span><span class="sxs-lookup"><span data-stu-id="a1c66-133">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="a1c66-134">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="a1c66-134">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="a1c66-135">Ferme une session interactive avec un processus local.</span><span class="sxs-lookup"><span data-stu-id="a1c66-135">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="a1c66-136">Exit-PSSession</span><span class="sxs-lookup"><span data-stu-id="a1c66-136">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="a1c66-137">Termine une session interactive avec un ordinateur distant.</span><span class="sxs-lookup"><span data-stu-id="a1c66-137">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="a1c66-138">Export-Console</span><span class="sxs-lookup"><span data-stu-id="a1c66-138">Export-Console</span></span>](Export-Console.md)
<span data-ttu-id="a1c66-139">Exporte les noms des composants logiciels enfichables de la session active dans un fichier de console.</span><span class="sxs-lookup"><span data-stu-id="a1c66-139">Exports the names of snap-ins in the current session to a console file.</span></span>

### [<span data-ttu-id="a1c66-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="a1c66-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="a1c66-141">Spécifie les membres de module exportés.</span><span class="sxs-lookup"><span data-stu-id="a1c66-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="a1c66-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="a1c66-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="a1c66-143">Effectue une opération sur chaque élément d'une collection d'objets d'entrée.</span><span class="sxs-lookup"><span data-stu-id="a1c66-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="a1c66-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="a1c66-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="a1c66-145">Obtient toutes les commandes.</span><span class="sxs-lookup"><span data-stu-id="a1c66-145">Gets all commands.</span></span>

### [<span data-ttu-id="a1c66-146">Get-Help</span><span class="sxs-lookup"><span data-stu-id="a1c66-146">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="a1c66-147">Affiche des informations sur les commandes et les concepts PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a1c66-147">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="a1c66-148">Get-History</span><span class="sxs-lookup"><span data-stu-id="a1c66-148">Get-History</span></span>](Get-History.md)
<span data-ttu-id="a1c66-149">Obtient une liste des commandes entrées pendant la session active.</span><span class="sxs-lookup"><span data-stu-id="a1c66-149">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="a1c66-150">Get-Job</span><span class="sxs-lookup"><span data-stu-id="a1c66-150">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="a1c66-151">Obtient les tâches en arrière-plan PowerShell qui s’exécutent dans la session active.</span><span class="sxs-lookup"><span data-stu-id="a1c66-151">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="a1c66-152">Get-Module</span><span class="sxs-lookup"><span data-stu-id="a1c66-152">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="a1c66-153">Obtient les modules qui ont été importés ou peuvent être importés dans la session active.</span><span class="sxs-lookup"><span data-stu-id="a1c66-153">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="a1c66-154">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="a1c66-154">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="a1c66-155">Obtient des informations sur le traitement de l’hôte PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a1c66-155">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="a1c66-156">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="a1c66-156">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="a1c66-157">Obtient les sessions PowerShell sur les ordinateurs locaux et distants.</span><span class="sxs-lookup"><span data-stu-id="a1c66-157">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="a1c66-158">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="a1c66-158">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="a1c66-159">Obtient les fonctionnalités d’un utilisateur spécifique sur une configuration de session avec restriction.</span><span class="sxs-lookup"><span data-stu-id="a1c66-159">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="a1c66-160">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a1c66-160">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="a1c66-161">Obtient les configurations de session inscrites sur l'ordinateur.</span><span class="sxs-lookup"><span data-stu-id="a1c66-161">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="a1c66-162">Get-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="a1c66-162">Get-PSSnapin</span></span>](Get-PSSnapin.md)
<span data-ttu-id="a1c66-163">Obtient les composants logiciels enfichables Windows PowerShell sur l'ordinateur.</span><span class="sxs-lookup"><span data-stu-id="a1c66-163">Gets the Windows PowerShell snap-ins on the computer.</span></span>

### [<span data-ttu-id="a1c66-164">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="a1c66-164">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="a1c66-165">Obtient les verbes PowerShell approuvés.</span><span class="sxs-lookup"><span data-stu-id="a1c66-165">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="a1c66-166">Module d’importation</span><span class="sxs-lookup"><span data-stu-id="a1c66-166">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="a1c66-167">Ajoute des modules à la session active.</span><span class="sxs-lookup"><span data-stu-id="a1c66-167">Adds modules to the current session.</span></span>

### [<span data-ttu-id="a1c66-168">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="a1c66-168">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="a1c66-169">Exécute des commandes sur des ordinateurs locaux et distants.</span><span class="sxs-lookup"><span data-stu-id="a1c66-169">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="a1c66-170">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="a1c66-170">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="a1c66-171">Exécute des commandes à partir de l'historique de session.</span><span class="sxs-lookup"><span data-stu-id="a1c66-171">Runs commands from the session history.</span></span>

### [<span data-ttu-id="a1c66-172">New-Module</span><span class="sxs-lookup"><span data-stu-id="a1c66-172">New-Module</span></span>](New-Module.md)
<span data-ttu-id="a1c66-173">Crée un module dynamique qui existe uniquement en mémoire.</span><span class="sxs-lookup"><span data-stu-id="a1c66-173">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="a1c66-174">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="a1c66-174">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="a1c66-175">Crée un manifeste de module.</span><span class="sxs-lookup"><span data-stu-id="a1c66-175">Creates a new module manifest.</span></span>

### [<span data-ttu-id="a1c66-176">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="a1c66-176">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="a1c66-177">Crée un fichier qui définit un ensemble de fonctionnalités à exposer par le biais d’une configuration de session.</span><span class="sxs-lookup"><span data-stu-id="a1c66-177">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="a1c66-178">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="a1c66-178">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="a1c66-179">Crée une connexion persistante à un ordinateur local ou distant.</span><span class="sxs-lookup"><span data-stu-id="a1c66-179">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="a1c66-180">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="a1c66-180">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="a1c66-181">Crée un fichier qui définit une configuration de session.</span><span class="sxs-lookup"><span data-stu-id="a1c66-181">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="a1c66-182">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="a1c66-182">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="a1c66-183">Crée un objet qui contient des options avancées pour une session PSSession.</span><span class="sxs-lookup"><span data-stu-id="a1c66-183">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="a1c66-184">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="a1c66-184">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="a1c66-185">Crée un objet qui contient des options avancées pour une configuration de session.</span><span class="sxs-lookup"><span data-stu-id="a1c66-185">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="a1c66-186">Out-Default</span><span class="sxs-lookup"><span data-stu-id="a1c66-186">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="a1c66-187">Envoie la sortie au formateur par défaut et à l'applet de commande de sortie par défaut.</span><span class="sxs-lookup"><span data-stu-id="a1c66-187">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="a1c66-188">Out-Host</span><span class="sxs-lookup"><span data-stu-id="a1c66-188">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="a1c66-189">Envoie la sortie vers la ligne de commande.</span><span class="sxs-lookup"><span data-stu-id="a1c66-189">Sends output to the command line.</span></span>

### [<span data-ttu-id="a1c66-190">Out-Null</span><span class="sxs-lookup"><span data-stu-id="a1c66-190">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="a1c66-191">Masque la sortie au lieu de l’envoyer dans le pipeline ou de l’afficher.</span><span class="sxs-lookup"><span data-stu-id="a1c66-191">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="a1c66-192">Receive-Job</span><span class="sxs-lookup"><span data-stu-id="a1c66-192">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="a1c66-193">Obtient les résultats des tâches en arrière-plan PowerShell dans la session active.</span><span class="sxs-lookup"><span data-stu-id="a1c66-193">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="a1c66-194">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="a1c66-194">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="a1c66-195">Obtient les résultats des commandes dans les sessions déconnectées.</span><span class="sxs-lookup"><span data-stu-id="a1c66-195">Gets results of commands in disconnected sessions.</span></span>

### [<span data-ttu-id="a1c66-196">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="a1c66-196">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="a1c66-197">Inscrit un finaliseur d’argument personnalisé.</span><span class="sxs-lookup"><span data-stu-id="a1c66-197">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="a1c66-198">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a1c66-198">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="a1c66-199">Crée et enregistre une configuration de session.</span><span class="sxs-lookup"><span data-stu-id="a1c66-199">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="a1c66-200">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="a1c66-200">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="a1c66-201">Supprime une tâche en arrière-plan PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a1c66-201">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="a1c66-202">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="a1c66-202">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="a1c66-203">Supprime des modules de la session active.</span><span class="sxs-lookup"><span data-stu-id="a1c66-203">Removes modules from the current session.</span></span>

### [<span data-ttu-id="a1c66-204">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="a1c66-204">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="a1c66-205">Ferme une ou plusieurs sessions PowerShell (sessions PSSession).</span><span class="sxs-lookup"><span data-stu-id="a1c66-205">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="a1c66-206">Remove-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="a1c66-206">Remove-PSSnapin</span></span>](Remove-PSSnapin.md)
<span data-ttu-id="a1c66-207">Supprime des composants logiciels enfichables Windows PowerShell de la session active.</span><span class="sxs-lookup"><span data-stu-id="a1c66-207">Removes Windows PowerShell snap-ins from the current session.</span></span>

### [<span data-ttu-id="a1c66-208">Resume-Job</span><span class="sxs-lookup"><span data-stu-id="a1c66-208">Resume-Job</span></span>](Resume-Job.md)
<span data-ttu-id="a1c66-209">Redémarre une tâche suspendue.</span><span class="sxs-lookup"><span data-stu-id="a1c66-209">Restarts a suspended job.</span></span>

### [<span data-ttu-id="a1c66-210">Save-Help</span><span class="sxs-lookup"><span data-stu-id="a1c66-210">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="a1c66-211">Télécharge et enregistre les derniers fichiers d'aide dans un répertoire du système de fichiers.</span><span class="sxs-lookup"><span data-stu-id="a1c66-211">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="a1c66-212">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="a1c66-212">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="a1c66-213">Active et désactive les fonctionnalités de débogage de script, définit le niveau de suivi et bascule en mode strict.</span><span class="sxs-lookup"><span data-stu-id="a1c66-213">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="a1c66-214">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a1c66-214">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="a1c66-215">Modifie les propriétés d'une configuration de session enregistrée.</span><span class="sxs-lookup"><span data-stu-id="a1c66-215">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="a1c66-216">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="a1c66-216">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="a1c66-217">Établit et applique des règles de codage dans les expressions, les scripts et les blocs de script.</span><span class="sxs-lookup"><span data-stu-id="a1c66-217">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="a1c66-218">Start-Job</span><span class="sxs-lookup"><span data-stu-id="a1c66-218">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="a1c66-219">Démarre une tâche en arrière-plan PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a1c66-219">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="a1c66-220">Stop-Job</span><span class="sxs-lookup"><span data-stu-id="a1c66-220">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="a1c66-221">Arrête une tâche en arrière-plan PowerShell.</span><span class="sxs-lookup"><span data-stu-id="a1c66-221">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="a1c66-222">Suspend-Job</span><span class="sxs-lookup"><span data-stu-id="a1c66-222">Suspend-Job</span></span>](Suspend-Job.md)
<span data-ttu-id="a1c66-223">Arrête temporairement les tâches de workflow.</span><span class="sxs-lookup"><span data-stu-id="a1c66-223">Temporarily stops workflow jobs.</span></span>

### [<span data-ttu-id="a1c66-224">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="a1c66-224">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="a1c66-225">Vérifie qu'un fichier manifeste de module décrit précisément le contenu d'un module.</span><span class="sxs-lookup"><span data-stu-id="a1c66-225">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="a1c66-226">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="a1c66-226">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="a1c66-227">Vérifie les clés et les valeurs d'un fichier de configuration de session.</span><span class="sxs-lookup"><span data-stu-id="a1c66-227">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="a1c66-228">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a1c66-228">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="a1c66-229">Supprime les configurations de sessions inscrites de l'ordinateur.</span><span class="sxs-lookup"><span data-stu-id="a1c66-229">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="a1c66-230">Update-Help</span><span class="sxs-lookup"><span data-stu-id="a1c66-230">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="a1c66-231">Télécharge et installe les derniers fichiers d'aide sur votre ordinateur.</span><span class="sxs-lookup"><span data-stu-id="a1c66-231">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="a1c66-232">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="a1c66-232">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="a1c66-233">Supprime l’invite de commandes jusqu’à ce qu’une ou toutes les tâches d’arrière-plan PowerShell en cours d’exécution dans la session soient terminées.</span><span class="sxs-lookup"><span data-stu-id="a1c66-233">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="a1c66-234">Where-Object</span><span class="sxs-lookup"><span data-stu-id="a1c66-234">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="a1c66-235">Sélectionne les objets d'une collection en fonction de leurs valeurs de propriété.</span><span class="sxs-lookup"><span data-stu-id="a1c66-235">Selects objects from a collection based on their property values.</span></span>
