reference/7.0/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113534
Help Version: 7.0.1.0
keywords: powershell,applet de commande
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 02/28/2019
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 839e2590d536cf06b28226f24d3a546a13520ecb
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 10/07/2020
ms.locfileid: "93206497"
---
# <span data-ttu-id="199ee-103">Module Microsoft.PowerShell.Core</span><span class="sxs-lookup"><span data-stu-id="199ee-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="199ee-104">Description</span><span class="sxs-lookup"><span data-stu-id="199ee-104">Description</span></span>

<span data-ttu-id="199ee-105">Cette section contient les rubriques d’aide pour les applets de commande installées avec le module Microsoft. PowerShell. Core PowerShell.</span><span class="sxs-lookup"><span data-stu-id="199ee-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="199ee-106">Le module principal contient des applets de commande et des fournisseurs qui gèrent les fonctionnalités de base de PowerShell.</span><span class="sxs-lookup"><span data-stu-id="199ee-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="199ee-107">Applets de commande Microsoft. PowerShell. Core</span><span class="sxs-lookup"><span data-stu-id="199ee-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="199ee-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="199ee-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="199ee-109">Ajoute des entrées à l'historique de session.</span><span class="sxs-lookup"><span data-stu-id="199ee-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="199ee-110">Clear-History</span><span class="sxs-lookup"><span data-stu-id="199ee-110">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="199ee-111">Supprime des entrées de l’historique de commande de session PowerShell.</span><span class="sxs-lookup"><span data-stu-id="199ee-111">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="199ee-112">Clear-Host</span><span class="sxs-lookup"><span data-stu-id="199ee-112">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="199ee-113">Efface l'affichage dans le programme hôte.</span><span class="sxs-lookup"><span data-stu-id="199ee-113">Clears the display in the host program.</span></span>

### [<span data-ttu-id="199ee-114">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="199ee-114">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="199ee-115">Se reconnecte aux sessions déconnectées.</span><span class="sxs-lookup"><span data-stu-id="199ee-115">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="199ee-116">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="199ee-116">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="199ee-117">Débogue un travail d’arrière-plan, distant ou PowerShell en cours d’exécution.</span><span class="sxs-lookup"><span data-stu-id="199ee-117">Debugs a running background, remote, or PowerShell Workflow job.</span></span>

### [<span data-ttu-id="199ee-118">Disable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="199ee-118">Disable-ExperimentalFeature</span></span>](Disable-ExperimentalFeature.md)
<span data-ttu-id="199ee-119">Désactivez une fonctionnalité expérimentale au démarrage de la nouvelle instance de PowerShell.</span><span class="sxs-lookup"><span data-stu-id="199ee-119">Disable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="199ee-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="199ee-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="199ee-121">Empêche les points de terminaison PowerShell de recevoir des connexions à distance.</span><span class="sxs-lookup"><span data-stu-id="199ee-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="199ee-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="199ee-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="199ee-123">Désactive les configurations de session sur l'ordinateur local.</span><span class="sxs-lookup"><span data-stu-id="199ee-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="199ee-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="199ee-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="199ee-125">Se déconnecte d'une session.</span><span class="sxs-lookup"><span data-stu-id="199ee-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="199ee-126">Enable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="199ee-126">Enable-ExperimentalFeature</span></span>](Enable-ExperimentalFeature.md)
<span data-ttu-id="199ee-127">Activez une fonctionnalité expérimentale au démarrage de la nouvelle instance de PowerShell.</span><span class="sxs-lookup"><span data-stu-id="199ee-127">Enable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="199ee-128">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="199ee-128">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="199ee-129">Configure l'ordinateur pour recevoir des commandes à distance.</span><span class="sxs-lookup"><span data-stu-id="199ee-129">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="199ee-130">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="199ee-130">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="199ee-131">Active les configurations de session sur l'ordinateur local.</span><span class="sxs-lookup"><span data-stu-id="199ee-131">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="199ee-132">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="199ee-132">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="199ee-133">Se connecte à et entre dans une session interactive avec un processus local.</span><span class="sxs-lookup"><span data-stu-id="199ee-133">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="199ee-134">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="199ee-134">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="199ee-135">Démarre une session interactive avec un ordinateur distant.</span><span class="sxs-lookup"><span data-stu-id="199ee-135">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="199ee-136">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="199ee-136">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="199ee-137">Ferme une session interactive avec un processus local.</span><span class="sxs-lookup"><span data-stu-id="199ee-137">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="199ee-138">Exit-PSSession</span><span class="sxs-lookup"><span data-stu-id="199ee-138">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="199ee-139">Termine une session interactive avec un ordinateur distant.</span><span class="sxs-lookup"><span data-stu-id="199ee-139">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="199ee-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="199ee-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="199ee-141">Spécifie les membres de module exportés.</span><span class="sxs-lookup"><span data-stu-id="199ee-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="199ee-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="199ee-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="199ee-143">Effectue une opération sur chaque élément d'une collection d'objets d'entrée.</span><span class="sxs-lookup"><span data-stu-id="199ee-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="199ee-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="199ee-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="199ee-145">Obtient toutes les commandes.</span><span class="sxs-lookup"><span data-stu-id="199ee-145">Gets all commands.</span></span>

### [<span data-ttu-id="199ee-146">Get-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="199ee-146">Get-ExperimentalFeature</span></span>](Get-ExperimentalFeature.md)
<span data-ttu-id="199ee-147">Obtient des fonctionnalités expérimentales.</span><span class="sxs-lookup"><span data-stu-id="199ee-147">Gets experimental features.</span></span>

### [<span data-ttu-id="199ee-148">Get-Help</span><span class="sxs-lookup"><span data-stu-id="199ee-148">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="199ee-149">Affiche des informations sur les commandes et les concepts PowerShell.</span><span class="sxs-lookup"><span data-stu-id="199ee-149">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="199ee-150">Get-History</span><span class="sxs-lookup"><span data-stu-id="199ee-150">Get-History</span></span>](Get-History.md)
<span data-ttu-id="199ee-151">Obtient une liste des commandes entrées pendant la session active.</span><span class="sxs-lookup"><span data-stu-id="199ee-151">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="199ee-152">Get-Job</span><span class="sxs-lookup"><span data-stu-id="199ee-152">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="199ee-153">Obtient les tâches en arrière-plan PowerShell qui s’exécutent dans la session active.</span><span class="sxs-lookup"><span data-stu-id="199ee-153">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="199ee-154">Get-Module</span><span class="sxs-lookup"><span data-stu-id="199ee-154">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="199ee-155">Obtient les modules qui ont été importés ou peuvent être importés dans la session active.</span><span class="sxs-lookup"><span data-stu-id="199ee-155">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="199ee-156">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="199ee-156">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="199ee-157">Obtient des informations sur le traitement de l’hôte PowerShell.</span><span class="sxs-lookup"><span data-stu-id="199ee-157">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="199ee-158">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="199ee-158">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="199ee-159">Obtient les sessions PowerShell sur les ordinateurs locaux et distants.</span><span class="sxs-lookup"><span data-stu-id="199ee-159">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="199ee-160">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="199ee-160">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="199ee-161">Obtient les fonctionnalités d’un utilisateur spécifique sur une configuration de session avec restriction.</span><span class="sxs-lookup"><span data-stu-id="199ee-161">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="199ee-162">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="199ee-162">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="199ee-163">Obtient les configurations de session inscrites sur l'ordinateur.</span><span class="sxs-lookup"><span data-stu-id="199ee-163">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="199ee-164">Module d’importation</span><span class="sxs-lookup"><span data-stu-id="199ee-164">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="199ee-165">Ajoute des modules à la session active.</span><span class="sxs-lookup"><span data-stu-id="199ee-165">Adds modules to the current session.</span></span>

### [<span data-ttu-id="199ee-166">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="199ee-166">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="199ee-167">Exécute des commandes sur des ordinateurs locaux et distants.</span><span class="sxs-lookup"><span data-stu-id="199ee-167">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="199ee-168">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="199ee-168">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="199ee-169">Exécute des commandes à partir de l'historique de session.</span><span class="sxs-lookup"><span data-stu-id="199ee-169">Runs commands from the session history.</span></span>

### [<span data-ttu-id="199ee-170">New-Module</span><span class="sxs-lookup"><span data-stu-id="199ee-170">New-Module</span></span>](New-Module.md)
<span data-ttu-id="199ee-171">Crée un module dynamique qui existe uniquement en mémoire.</span><span class="sxs-lookup"><span data-stu-id="199ee-171">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="199ee-172">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="199ee-172">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="199ee-173">Crée un manifeste de module.</span><span class="sxs-lookup"><span data-stu-id="199ee-173">Creates a new module manifest.</span></span>

### [<span data-ttu-id="199ee-174">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="199ee-174">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="199ee-175">Crée un fichier qui définit un ensemble de fonctionnalités à exposer par le biais d’une configuration de session.</span><span class="sxs-lookup"><span data-stu-id="199ee-175">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="199ee-176">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="199ee-176">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="199ee-177">Crée une connexion persistante à un ordinateur local ou distant.</span><span class="sxs-lookup"><span data-stu-id="199ee-177">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="199ee-178">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="199ee-178">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="199ee-179">Crée un fichier qui définit une configuration de session.</span><span class="sxs-lookup"><span data-stu-id="199ee-179">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="199ee-180">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="199ee-180">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="199ee-181">Crée un objet qui contient des options avancées pour une session PSSession.</span><span class="sxs-lookup"><span data-stu-id="199ee-181">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="199ee-182">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="199ee-182">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="199ee-183">Crée un objet qui contient des options avancées pour une configuration de session.</span><span class="sxs-lookup"><span data-stu-id="199ee-183">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="199ee-184">Out-Default</span><span class="sxs-lookup"><span data-stu-id="199ee-184">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="199ee-185">Envoie la sortie au formateur par défaut et à l'applet de commande de sortie par défaut.</span><span class="sxs-lookup"><span data-stu-id="199ee-185">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="199ee-186">Out-Host</span><span class="sxs-lookup"><span data-stu-id="199ee-186">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="199ee-187">Envoie la sortie vers la ligne de commande.</span><span class="sxs-lookup"><span data-stu-id="199ee-187">Sends output to the command line.</span></span>

### [<span data-ttu-id="199ee-188">Out-Null</span><span class="sxs-lookup"><span data-stu-id="199ee-188">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="199ee-189">Masque la sortie au lieu de l’envoyer dans le pipeline ou de l’afficher.</span><span class="sxs-lookup"><span data-stu-id="199ee-189">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="199ee-190">Receive-Job</span><span class="sxs-lookup"><span data-stu-id="199ee-190">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="199ee-191">Obtient les résultats des tâches en arrière-plan PowerShell dans la session active.</span><span class="sxs-lookup"><span data-stu-id="199ee-191">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="199ee-192">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="199ee-192">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="199ee-193">Obtient les résultats des commandes dans des sessions déconnectées</span><span class="sxs-lookup"><span data-stu-id="199ee-193">Gets results of commands in disconnected sessions</span></span>

### [<span data-ttu-id="199ee-194">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="199ee-194">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="199ee-195">Inscrit un finaliseur d’argument personnalisé.</span><span class="sxs-lookup"><span data-stu-id="199ee-195">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="199ee-196">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="199ee-196">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="199ee-197">Crée et enregistre une configuration de session.</span><span class="sxs-lookup"><span data-stu-id="199ee-197">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="199ee-198">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="199ee-198">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="199ee-199">Supprime une tâche en arrière-plan PowerShell.</span><span class="sxs-lookup"><span data-stu-id="199ee-199">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="199ee-200">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="199ee-200">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="199ee-201">Supprime des modules de la session active.</span><span class="sxs-lookup"><span data-stu-id="199ee-201">Removes modules from the current session.</span></span>

### [<span data-ttu-id="199ee-202">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="199ee-202">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="199ee-203">Ferme une ou plusieurs sessions PowerShell (sessions PSSession).</span><span class="sxs-lookup"><span data-stu-id="199ee-203">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="199ee-204">Save-Help</span><span class="sxs-lookup"><span data-stu-id="199ee-204">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="199ee-205">Télécharge et enregistre les derniers fichiers d'aide dans un répertoire du système de fichiers.</span><span class="sxs-lookup"><span data-stu-id="199ee-205">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="199ee-206">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="199ee-206">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="199ee-207">Active et désactive les fonctionnalités de débogage de script, définit le niveau de suivi et bascule en mode strict.</span><span class="sxs-lookup"><span data-stu-id="199ee-207">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="199ee-208">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="199ee-208">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="199ee-209">Modifie les propriétés d'une configuration de session enregistrée.</span><span class="sxs-lookup"><span data-stu-id="199ee-209">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="199ee-210">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="199ee-210">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="199ee-211">Établit et applique des règles de codage dans les expressions, les scripts et les blocs de script.</span><span class="sxs-lookup"><span data-stu-id="199ee-211">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="199ee-212">Start-Job</span><span class="sxs-lookup"><span data-stu-id="199ee-212">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="199ee-213">Démarre une tâche en arrière-plan PowerShell.</span><span class="sxs-lookup"><span data-stu-id="199ee-213">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="199ee-214">Stop-Job</span><span class="sxs-lookup"><span data-stu-id="199ee-214">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="199ee-215">Arrête une tâche en arrière-plan PowerShell.</span><span class="sxs-lookup"><span data-stu-id="199ee-215">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="199ee-216">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="199ee-216">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="199ee-217">Vérifie qu'un fichier manifeste de module décrit précisément le contenu d'un module.</span><span class="sxs-lookup"><span data-stu-id="199ee-217">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="199ee-218">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="199ee-218">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="199ee-219">Vérifie les clés et les valeurs d'un fichier de configuration de session.</span><span class="sxs-lookup"><span data-stu-id="199ee-219">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="199ee-220">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="199ee-220">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="199ee-221">Supprime les configurations de sessions inscrites de l'ordinateur.</span><span class="sxs-lookup"><span data-stu-id="199ee-221">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="199ee-222">Update-Help</span><span class="sxs-lookup"><span data-stu-id="199ee-222">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="199ee-223">Télécharge et installe les derniers fichiers d'aide sur votre ordinateur.</span><span class="sxs-lookup"><span data-stu-id="199ee-223">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="199ee-224">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="199ee-224">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="199ee-225">Supprime l’invite de commandes jusqu’à ce qu’une ou toutes les tâches d’arrière-plan PowerShell en cours d’exécution dans la session soient terminées.</span><span class="sxs-lookup"><span data-stu-id="199ee-225">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="199ee-226">Where-Object</span><span class="sxs-lookup"><span data-stu-id="199ee-226">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="199ee-227">Sélectionne les objets d'une collection en fonction de leurs valeurs de propriété.</span><span class="sxs-lookup"><span data-stu-id="199ee-227">Selects objects from a collection based on their property values.</span></span>
